# bevy_screen_effects

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
examples/: showcase.rs
src/: effect.rs  layer.rs  lib.rs  lifetime.rs
src/distortion/: heat_haze.rs  mod.rs  radial_blur.rs  shockwave.rs  water_drops.rs
src/feedback/: damage_vignette.rs  flash.rs  mod.rs  speed_lines.rs
src/glitch/: block_displacement.rs  crt.rs  emp.rs  mod.rs  rgb_split.rs  scanline.rs  static_noise.rs
src/render/: extract.rs  mod.rs  node.rs  pipeline.rs  pipelines.rs  prepare.rs
src/render/shaders/: crt.wgsl  emp.wgsl  flash.wgsl  fullscreen.wgsl  glitch.wgsl  radial_blur.wgsl  raindrops.wgsl  rgb_split.wgsl  shockwave.wgsl  vignette.wgsl  world_heat_shimmer.wgsl
